# consulator

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: push.yml  release.yml
src/: internal.rs  kv_value.rs  lib.rs  main.rs
src/internal/: consul.rs  errors.rs  kv.rs  settings.rs
